objects/OpportunityNotification__c.object
<CustomObject>
    <fields>
        <fullName>AccountForConversion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a valid Account from the lookup filter before conversion</inlineHelpText>
        <label>Account For Conversion</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Notifications</relationshipLabel>
        <relationshipName>Opportunity_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountFromOffline__c</fullName>
        <inlineHelpText>For Offline usage only</inlineHelpText>
        <label>Account From Offline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>AccountForConversion__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&quot;&quot;&amp;WorkOrder__r.SVMXC__Company__r.Id , WorkOrder__r.SVMXC__Company__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Conversion_postal_code__c</fullName>
        <formula>AccountForConversion__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for Conversion postal code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>For Offline usage only</inlineHelpText>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a work order under service contract is used to generate this Opportunity Notification, then this field can be used to reference the contract.</description>
        <inlineHelpText>If a work order under service contract is used to generate this Opportunity Notification, then this field can be used to reference the contract.</inlineHelpText>
        <label>Associated Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Opportunity Notifications</relationshipLabel>
        <relationshipName>Opportunity_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Case</description>
        <inlineHelpText>Case Number</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunity Notifications</relationshipLabel>
        <relationshipName>Opportunity_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Order</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipLabel>Opportunity Notifications</relationshipLabel>
        <relationshipName>Opportunity_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>For Offline usage only</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <inlineHelpText>Date when we could expect to receive an order from the customer</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <inlineHelpText>For Offline usage only</inlineHelpText>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Partner Contact</fullName>
                </value>
                <value>
                    <fullName>End User Executive</fullName>
                </value>
                <value>
                    <fullName>End User Financial Influencer</fullName>
                </value>
                <value>
                    <fullName>End User Technical Influencer</fullName>
                </value>
                <value>
                    <fullName>VCP Executive</fullName>
                </value>
                <value>
                    <fullName>VCP Financial Influencer</fullName>
                </value>
                <value>
                    <fullName>VCP Technical Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Notifications</relationshipLabel>
        <relationshipName>Opportunity_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountryDestination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Of Destination</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Opportunity Notifications</relationshipLabel>
        <relationshipName>Opportunity_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountryOfDestination__c</fullName>
        <formula>HYPERLINK(&quot;&quot;&amp;WorkOrder__r.SVMXC__Company__r.Country__r.Id , WorkOrder__r.SVMXC__Company__r.Country__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DO NOT USE - Country of Destination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedFrom__c</fullName>
        <description>Identify the source of creation</description>
        <label>Created From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INTERNAL</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>PARTNER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DetectorManager__c</fullName>
        <description>Manager of the Opportunity Detector</description>
        <formula>OpportunityDetector__r.Manager.FirstName &amp;&quot; &quot;&amp;OpportunityDetector__r.Manager.LastName</formula>
        <label>Detector Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurationBtwnCreationAndLastStatusChange__c</fullName>
        <description>Duration in hours between the last status change and the creation date. If no status change yet, then it is 0.</description>
        <formula>IF(
  !ISBLANK(LastStatusChangeTimestamp__c),
  MAX((LastStatusChangeTimestamp__c - CreatedDate) * 24, 0),
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in hours between the last status change and the creation date. If no status change yet, then it is 0.</inlineHelpText>
        <label>Hours btwn Creation &amp; Last status chg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Connected_Offer__c</fullName>
        <label>From Connected Offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>StruxureOn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Customer_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Customer Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludedinForecast__c</fullName>
        <label>Included in Forecast</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Count__c</fullName>
        <label>Interest Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastStatusChangeTimestamp__c</fullName>
        <description>Capture the data/time when the status has last changed (after creation).</description>
        <inlineHelpText>Capture the data/time when the status has last changed (after creation).</inlineHelpText>
        <label>Last status change timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadingBusinessBU__c</fullName>
        <label>Leading Business (BU)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadingBusiness__c</fullName>
        <formula>text(WorkOrder__r.Service_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DO NOT USE - Leading Business (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Opportunity Notifications</relationshipLabel>
        <relationshipName>Opportunity_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseId__c</fullName>
        <description>This field is used by Odaseva archiving solution in order to store the case id of archived cases. Required in 18-char format</description>
        <externalId>true</externalId>
        <label>OdasevaArchivedCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseNumber__c</fullName>
        <label>OdasevaArchivedCaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseURL__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(OdasevaArchivedCaseId__c)),NOT(ISBLANK(OdasevaArchivedCaseNumber__c))),HYPERLINK($Label.OdasevaArchivedCaseUrlPrefix &amp; OdasevaArchivedCaseId__c, OdasevaArchivedCaseNumber__c),&quot;No archived case to display&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odaseva Archived Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppNamingConvention__c</fullName>
        <defaultValue>&quot;Project Name - Opportunity Scope - End User - Location - Account Name &quot; &amp; BR() &amp; &quot; e.g.: Praha Airport - Medium Voltage - Airport Authority - Praha - Lendl Contracting&quot;</defaultValue>
        <inlineHelpText>Project Name - Opportunity Scope - End User - Location - Account Name -Service Business Unit e.g.: Praha Airport - Medium Voltage - Airport Authority - Praha - Lendl Contracting</inlineHelpText>
        <label>Opportunity Naming Convention</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityCategory__c</fullName>
        <label>Opportunity Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                    <default>true</default>
                    <label>Simple</label>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityDetectorUser__c</fullName>
        <description>BFOFS-2455</description>
        <formula>IF(OpportunityDetector__c= $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityDetectorUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityDetector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the person who spoke with the contact in relation to the Opportunity.</inlineHelpText>
        <label>Opportunity Detector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityNotifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityLeaderOffline__c</fullName>
        <description>BR-10398: To allow FSR to capture the sales rep name while offline</description>
        <label>Opportunity Leader (Offline)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLeader__c</fullName>
        <description>Once the opportunity notification is converted, this field will show the First Name and Last Name of the Opportunity Leader. Otherwise it will be blank.</description>
        <formula>IF(!ISBLANK(OpportunityLink__c), OpportunityLink__r.Owner.FirstName &amp; &quot; &quot; &amp; OpportunityLink__r.Owner.LastName, null)</formula>
        <inlineHelpText>Once the opportunity notification is converted, this field will show the First Name and Last Name of the Opportunity Leader.</inlineHelpText>
        <label>OpportunityLeader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Opportunity</description>
        <label>Opportunity Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Notifications</relationshipLabel>
        <relationshipName>Opportunity_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityNamingConvention__c</fullName>
        <label>Opportunity Naming Convention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project name - Location - Account Name - End user - Service Business</fullName>
                    <default>true</default>
                    <label>Project name - Location - Account Name - End user - Service Business</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who will own the Opportunity, this should be updated prior to conversion by the person converting.</inlineHelpText>
        <label>Opportunity Notification Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityOwnerNotifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityScope__c</fullName>
        <inlineHelpText>For standard opportunity, select the main product line.</inlineHelpText>
        <label>Opportunity Line Scope</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OpportunityType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BDADS</fullName>
                </value>
                <value>
                    <fullName>BDBMS</fullName>
                </value>
                <value>
                    <fullName>BDSEC</fullName>
                </value>
                <value>
                    <fullName>BDSL3</fullName>
                </value>
                <value>
                    <fullName>CLSAS</fullName>
                </value>
                <value>
                    <fullName>ESEEP</fullName>
                </value>
                <value>
                    <fullName>ESEPC</fullName>
                </value>
                <value>
                    <fullName>ESMON</fullName>
                </value>
                <value>
                    <fullName>ESSMS</fullName>
                </value>
                <value>
                    <fullName>IDADS</fullName>
                </value>
                <value>
                    <fullName>IDCOM</fullName>
                </value>
                <value>
                    <fullName>IDEUR</fullName>
                </value>
                <value>
                    <fullName>IDFLD</fullName>
                </value>
                <value>
                    <fullName>IDHMI</fullName>
                </value>
                <value>
                    <fullName>IDIBO</fullName>
                </value>
                <value>
                    <fullName>IDNUC</fullName>
                </value>
                <value>
                    <fullName>IDOL2</fullName>
                </value>
                <value>
                    <fullName>IDPAC</fullName>
                </value>
                <value>
                    <fullName>IDPAS</fullName>
                </value>
                <value>
                    <fullName>IDSDS</fullName>
                </value>
                <value>
                    <fullName>IDSEN</fullName>
                </value>
                <value>
                    <fullName>IDSIG</fullName>
                </value>
                <value>
                    <fullName>IDSL3</fullName>
                </value>
                <value>
                    <fullName>IDVSD</fullName>
                </value>
                <value>
                    <fullName>INADS</fullName>
                </value>
                <value>
                    <fullName>INENP</fullName>
                </value>
                <value>
                    <fullName>INENS</fullName>
                </value>
                <value>
                    <fullName>INIBS</fullName>
                </value>
                <value>
                    <fullName>INMCP</fullName>
                </value>
                <value>
                    <fullName>INMVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunitySource__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Plan – Renewal</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <formula>TEXT(OpportunityLink__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Solutions Fast-Track</fullName>
                    <default>true</default>
                    <label>Solutions Fast-Track</label>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>OpportunityLink__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpptySEReference__c</fullName>
        <formula>OpportunityLink__r.SEReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity SE Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_Naming_Convention__c</fullName>
        <label>Project Name Naming Convention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedAmount__c</fullName>
        <description>Sum of the amounts of the related interests.</description>
        <inlineHelpText>Sum of the amounts of the related interests.</inlineHelpText>
        <label>Proposed Amount</label>
        <summarizedField>InterestOnOpportunityNotif__c.Amount__c</summarizedField>
        <summaryForeignKey>InterestOnOpportunityNotif__c.OpportunityNotification__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>R117_Total_Count_of_Interest__c</fullName>
        <label>Total Count of Interest</label>
        <summaryForeignKey>InterestOnOpportunityNotif__c.OpportunityNotification__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RejectionComments__c</fullName>
        <label>Rejection Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RejectionReason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXPriority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Competitors Modernization</fullName>
                </value>
                <value>
                    <fullName>Condition Based Maintenance</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Design Study</fullName>
                </value>
                <value>
                    <fullName>Feasibility Study</fullName>
                </value>
                <value>
                    <fullName>Modernization Consultancy</fullName>
                </value>
                <value>
                    <fullName>Modernization Services</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Remote Services</fullName>
                </value>
                <value>
                    <fullName>Remote Support</fullName>
                </value>
                <value>
                    <fullName>Software Setup</fullName>
                </value>
                <value>
                    <fullName>Start-Up Services</fullName>
                </value>
                <value>
                    <fullName>Warranty Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2 - Define Opportunity Portfolio</fullName>
                    <default>true</default>
                    <label>2 - Define Opportunity Portfolio</label>
                </value>
                <value>
                    <fullName>3 - Identify &amp; Qualify</fullName>
                </value>
                <value>
                    <fullName>4 - Influence &amp; Develop</fullName>
                </value>
                <value>
                    <fullName>5 - Prepare &amp; Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechCreatedFromSC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TechCreatedFromSC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_CreatedFromIB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TechCreatedFromIB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_MyTeam__c</fullName>
        <description>Logged in user can see the team if this field will be set to true</description>
        <formula>AND(!ISBLANK(Owner:User.ManagerId) , ((Owner:User.Id == $User.Id) || (Owner:User.ManagerId == $User.Id)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_MyTeam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WO_Bill_to_Account__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+WorkOrder__r.BillToAccount__c,WorkOrder__r.BillToAccount__r.Name)</formula>
        <label>W/O Bill to Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Sold_to_Account__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+WorkOrder__r.SoldToAccount__c,WorkOrder__r.SoldToAccount__r.Name)</formula>
        <label>W/O Sold to Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_O_Bill_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>W/O Bill to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Notifications (W/O Bill to Account)</relationshipLabel>
        <relationshipName>Opportunity_Notifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>W_O_Sold_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>W/O Sold to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Notifications (W/O Sold to Account)</relationshipLabel>
        <relationshipName>Opportunity_Notifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Opportunity Notifications (Work Order)</relationshipLabel>
        <relationshipName>Opportunity_Notifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>atleastOneInterestWarning__c</fullName>
        <formula>IF(R117_Total_Count_of_Interest__c ==0,
        IMAGE(&quot;/img/msg_icons/warning24.gif&quot;, &quot;&quot;) &amp; &quot; You must add at least one interest to the opportunity notification. &quot;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;&gt;</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Notification</label>
    <listViews>
        <fullName>ALL_Canada_ITD1</fullName>
        <columns>Account__c</columns>
        <columns>CloseDate__c</columns>
        <columns>CountryDestination__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>WorkOrder__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryDestination__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>LeadingBusinessBU__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>ALL Canada_ITD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_Spain</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CloseDate__c</columns>
        <columns>CountryOfDestination__c</columns>
        <columns>Status__c</columns>
        <columns>OpportunityDetector__c</columns>
        <columns>WorkOrder__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryDestination__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <label>ALL Spain</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_Thailand</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CloseDate__c</columns>
        <columns>CountryOfDestination__c</columns>
        <columns>Status__c</columns>
        <columns>OpportunityDetector__c</columns>
        <columns>WorkOrder__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryDestination__c</field>
            <operation>equals</operation>
            <value>Thailand</value>
        </filters>
        <label>ALL Thailand</label>
        <language>en_US</language>
    </listViews>
</CustomObject>